locally we are done apart fro one small thing check notes off 6/10
